[gd_scene load_steps=12 format=3 uid="uid://brf3lhrlvfhw4"]

[ext_resource type="Script" uid="uid://blgj2uyjqwdth" path="res://keypad_ui.gd" id="1_j2e88"]
[ext_resource type="Texture2D" uid="uid://cvqtoc0cihibq" path="res://textures/world/Keypad.png" id="2_j2e88"]
[ext_resource type="FontFile" uid="uid://clkkpche2sgry" path="res://fonts/Atlantistextregular-qZv0.ttf" id="3_lysnd"]
[ext_resource type="FontFile" uid="uid://bgmjid013gbqo" path="res://fonts/Atlantistextcaps-ALnm.ttf" id="4_8tycp"]
[ext_resource type="FontFile" uid="uid://j7k6mr6uhwn" path="res://fonts/Atlantistextbold-DOr0.ttf" id="4_hpdna"]
[ext_resource type="AudioStream" uid="uid://7bwph8hui13k" path="res://sounds/KeypadBeep.wav" id="6_hpdna"]
[ext_resource type="AudioStream" uid="uid://c7nicbuhdkj6w" path="res://sounds/KeypadWrong.wav" id="7_hn8m0"]
[ext_resource type="AudioStream" uid="uid://cfbf7g88v33e5" path="res://sounds/KeypadRight.wav" id="8_x475k"]
[ext_resource type="FontFile" uid="uid://bm8tgrodrh0y0" path="res://fonts/Atlantisheadbold-p7KZ.ttf" id="9_h03ng"]

[sub_resource type="LabelSettings" id="LabelSettings_kckd0"]
font = ExtResource("3_lysnd")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_j2e88"]
font = ExtResource("4_8tycp")
font_size = 32

[node name="KeypadUI" type="Node2D"]
script = ExtResource("1_j2e88")

[node name="KeypadSprite" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(976, 340)
scale = Vector2(4.31944, 4.31944)
texture = ExtResource("2_j2e88")

[node name="InputLabel" type="Label" parent="."]
offset_left = 914.0
offset_top = 225.0
offset_right = 1039.0
offset_bottom = 264.0
text = "888888"
label_settings = SubResource("LabelSettings_kckd0")
vertical_alignment = 1

[node name="RememberedLabel" type="RichTextLabel" parent="."]
offset_left = 898.0
offset_top = 172.0
offset_right = 1166.0
offset_bottom = 256.0
theme_override_fonts/normal_font = ExtResource("4_hpdna")
bbcode_enabled = true
text = "[font_size=40][color=BLUE_VIOLET][shake rate=20.0 level=5 connected=1]888888"

[node name="HelpLabel" type="Label" parent="."]
visible = false
offset_left = 824.0
offset_top = 465.0
offset_right = 1124.0
offset_bottom = 499.0
text = "(use the number keys)"
label_settings = SubResource("LabelSettings_j2e88")

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
position = Vector2(558, 316)
stream = ExtResource("6_hpdna")

[node name="Wrong" type="AudioStreamPlayer2D" parent="."]
position = Vector2(558, 316)
stream = ExtResource("7_hn8m0")

[node name="Right" type="AudioStreamPlayer2D" parent="."]
position = Vector2(558, 316)
stream = ExtResource("8_x475k")

[node name="EasterEgg" type="RichTextLabel" parent="."]
visible = false
offset_left = 13.0
offset_top = 101.0
offset_right = 589.0
offset_bottom = 536.0
theme_override_fonts/normal_font = ExtResource("9_h03ng")
bbcode_enabled = true
text = "[font_size=50][rainbow freq=0.2 sat=1 val=1][wave amp=50 freq=2]MALDAVIUS
FIGTREE
IS A GAY
RETARDED
NEPOBABY"
horizontal_alignment = 1
vertical_alignment = 1
